--- a/app/src/main/res/layout/activity_art.xml
+++ b/app/src/main/res/layout/activity_art.xml
@@ -8,7 +8,7 @@
     tools:context=".ArtActivity">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageViewSelect"
         android:layout_width="237dp"
         android:layout_height="207dp"
         android:layout_marginTop="44dp"
@@ -28,7 +28,7 @@
         android:text="İsim"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/imageViewSelect" />
 
     <EditText
         android:id="@+id/editTextTime"
