database'den veriler çekilip recyclerView'e basıldı.

--- a/app/src/main/res/layout/activity_art.xml
+++ b/app/src/main/res/layout/activity_art.xml
@@ -11,7 +11,7 @@
         android:id="@+id/imageViewSelect"
         android:layout_width="237dp"
         android:layout_height="207dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -21,24 +21,27 @@
         android:id="@+id/editTextName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
-        android:ems="10"
-        android:inputType="textPersonName"
+        android:layout_marginTop="24dp"
         android:backgroundTint="#1565c0"
-        android:text="İsim"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:ems="10"
+        android:hint="İsim"
+        android:textColorHint="@color/Chocolate"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="@+id/imageViewSelect"
+        app:layout_constraintHorizontal_bias="0.518"
+        app:layout_constraintStart_toStartOf="@+id/imageViewSelect"
         app:layout_constraintTop_toBottomOf="@+id/imageViewSelect" />
 
     <EditText
-        android:id="@+id/editTextTime"
+        android:id="@+id/editTextYear"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:ems="10"
+        android:layout_marginTop="16dp"
         android:backgroundTint="#1565c0"
+        android:ems="10"
+        android:hint="Yıl"
+        android:textColorHint="@color/Chocolate"
         android:inputType="number"
-        android:text="Yıl"
         app:layout_constraintEnd_toEndOf="@+id/editTextName"
         app:layout_constraintStart_toStartOf="@+id/editTextName"
         app:layout_constraintTop_toBottomOf="@+id/editTextName" />
@@ -47,11 +50,10 @@
         android:id="@+id/buttonSave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="108dp"
-        android:text="Kaydet"
+        android:layout_marginBottom="16dp"
         android:backgroundTint="#1565c0"
+        android:text="Kaydet"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTime" />
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
