--- a/app/src/main/res/layout/recycler_row.xml
+++ b/app/src/main/res/layout/recycler_row.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Test"
+        android:gravity="center"
         android:textSize="22sp"
         android:textColor="@color/purple_700"/>
 
