--- a/app/src/main/res/layout/recycler_row.xml
+++ b/app/src/main/res/layout/recycler_row.xml
@@ -2,16 +2,24 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="5dp">
+    android:layout_height="80dp"
+    android:layout_margin="5dp"
+    android:background="@color/md_teal_100"
+    android:orientation="horizontal">
 
+    <ImageView
+        android:id="@+id/recyclerviewImage"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_gravity="center"
+        android:src="@drawable/ic_round_image_search_24"/>
     <TextView
         android:id="@+id/recyclerViewText"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="50dp"
         android:text="Test"
         android:gravity="center"
-        android:background="@color/md_purple_100"
+        android:layout_gravity="center"
         android:textSize="22sp"
         android:textColor="@color/black"/>
 
