--- a/app/src/main/res/layout/activity_art.xml
+++ b/app/src/main/res/layout/activity_art.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#bbdefb"
+    android:background="#819ca9"
     tools:context=".ArtActivity">
 
     <ImageView
@@ -25,7 +25,7 @@
         android:backgroundTint="#1565c0"
         android:ems="10"
         android:hint="İsim"
-        android:textColorHint="@color/Chocolate"
+        android:textColorHint="@color/white"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="@+id/imageViewSelect"
         app:layout_constraintHorizontal_bias="0.518"
@@ -40,7 +40,7 @@
         android:backgroundTint="#1565c0"
         android:ems="10"
         android:hint="Yıl"
-        android:textColorHint="@color/Chocolate"
+        android:textColorHint="@color/white"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="@+id/editTextName"
         app:layout_constraintStart_toStartOf="@+id/editTextName"
