--- a/app/src/main/res/layout/recycler_row.xml
+++ b/app/src/main/res/layout/recycler_row.xml
@@ -3,14 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="80dp"
-    android:layout_margin="5dp"
-    android:background="@color/md_teal_100"
+    android:layout_margin="10dp"
+    android:background="#819ca9"
     android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/recyclerviewImage"
         android:layout_width="80dp"
         android:layout_height="80dp"
+        android:layout_marginLeft="10dp"
         android:layout_gravity="center"
         android:src="@drawable/ic_round_image_search_24"/>
     <TextView
@@ -21,6 +22,6 @@
         android:gravity="center"
         android:layout_gravity="center"
         android:textSize="22sp"
-        android:textColor="@color/black"/>
+        android:textColor="@color/white"/>
 
 </LinearLayout>
